# stormrider

./: .gitignore  CMakeLists.txt  README.md  sources.cmake
cmake/: FindVamp.cmake
src/: stormrider.cpp
src/audio/: BpmExtractor.cpp  BpmExtractor.h  ExtractorSettings.cpp  ExtractorSettings.h
src/audio/aubiowrapper/: FVec.cpp  FVec.h  Source.cpp  Source.h  Tempo.cpp  Tempo.h  WaveTable.cpp  WaveTable.h
src/audio/vamp/: FeatureSet.cpp  FeatureSet.h  PluginExecutor.cpp  PluginExecutor.h  PluginInputBuffer.cpp  PluginInputBuffer.h
src/graphics/: Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h
src/utils/: stormlogger.cpp  stormlogger.h
